--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/fontawesome.js"
+            ]
           },
           "configurations": {
             "production": {
