--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.9",
+    "@angular/animations": "^10.0.0",
     "@angular/cli": "^9.1.9",
     "@angular/common": "~9.1.9",
     "@angular/compiler": "~9.1.9",
